fixed contrast on main page

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -47,7 +47,7 @@ li {
 
 nav ul li a {
     padding: .5rem 1rem;
-    color: red;
+    color: rgb(0, 4, 255);
 }
  
 nav ul li a:hover {
